# CBNJuce

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-plugin.sh  build-react.sh  setup.sh
docs/: ADVANCED_GUIDE.md  KNOBS.md  TROUBLESHOOTING.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ui/: package.json
ui/public/: index.html
ui/public/jucejs/: main.js
ui/src/: App.js
ui/src/components/: FilterDisplay.js  Header.js  Knob.js  Meter.js  Oscilloscope.js  Toggle.js  Tooltip.js
ui/src/components/ControlPanel/: controlpanel.scss  index.js
ui/src/components/FilterDisplay/: filter.scss  index.js
ui/src/components/Header/: header.scss  index.js
ui/src/components/Knob/: index.js  knob.scss
ui/src/components/Meter/: index.js  meter.scss
ui/src/components/Oscilloscope/: index.js  oscilloscope.scss
ui/src/components/Toggle/: index.js  toggle.scss
ui/src/components/Tooltip/: index.js  tooltip.scss
ui/src/styles/: _mixins.scss  _variables.scss  main.scss  variables.scss
ui/src/styles/components/: _filter.scss  _header.scss  _knob.scss  _meter.scss  _oscilloscope.scss  _toggle.scss  _tooltip.scss
